first question done

--- a/index.html
+++ b/index.html
@@ -9,7 +9,35 @@
 </head>
 
 <body>
+  <section class="header">
+    <h1>Workbook</h1>
+  </section>
+    <h2></h2>
+  <section class="questions">
+    <h3>Q1 - Identify and explain common and important components and concepts of web development markup languages.</h3>
+    <p>The components of markup languages consists of tags, keywords and names.<br>
+    There are many uses of a <strong>tag</strong> in web developement and markup language. The important component is the document tag component. Which helps a web browser determine between simple or HTML content. Which dictates how the content is viewed, displayed, or formated on the webpage.<br>
+    Some common tags include <strong>keyword</strong> tags. That are used to define, group and give more information about the webpage content.</p> 
+    <p>The <strong>name</strong> component defines and contains a certain section of content on a webpage. And can be used in reference to the styling and formatting of the section.</p>
+    <p>They are usually used in specifying the different sections and grouping the specific content, under its own name within the webpage.</p>
+    <p>With these components, they allow content and information to be formatted and displayed in the style or position you want it to be. 
+    Or change how the content is viewed.</p>
+    <h3></h3>
+    <p></p>
+    <p></p>
+    <p></p>
 
+    <h3></h3>
+    <p></p>
+    <p></p>
+    <p></p>
+
+    <h3></h3>
+    <p></p>
+    <p></p>
+    <p></p>
+
+  </section>
 
 </body>
 </html>
